Add replication factor in production and staging
This is to allow multiple instances of the application

--- a/kubernetes_deploy/production/deployment.yaml
+++ b/kubernetes_deploy/production/deployment.yaml
@@ -4,6 +4,10 @@ metadata:
   name: laa-fee-calculator
   namespace: laa-fee-calculator-production
 spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: laa-fee-calculator-app
   template:
     metadata:
       labels:
