--- a/kubernetes_deploy/production/deployment.yaml
+++ b/kubernetes_deploy/production/deployment.yaml
@@ -25,5 +25,10 @@ spec:
             secretKeyRef:
               name: django-secret
               key: key
+        - name: SENTRY_DSN
+          valueFrom:
+            secretKeyRef:
+              name: sentry-dsn
+              key: key
         - name: ENV
           value: production
