--- a/kubernetes_deploy/staging/deployment.yaml
+++ b/kubernetes_deploy/staging/deployment.yaml
@@ -24,5 +24,10 @@ spec:
             secretKeyRef:
               name: django-secret
               key: key
+        - name: SENTRY_DSN
+          valueFrom:
+            secretKeyRef:
+              name: sentry-dsn
+              key: key
         - name: ENV
           value: staging
