--- a/kubernetes_deploy/staging/ingress.yaml
+++ b/kubernetes_deploy/staging/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - hosts:
+    - laa-fee-calculator-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
   rules:
   - host: laa-fee-calculator-staging.apps.cloud-platform-live-0.k8s.integration.dsd.io
     http:
