--- a/kubernetes_deploy/live-1/staging/ingress.yaml
+++ b/kubernetes_deploy/live-1/staging/ingress.yaml
@@ -6,14 +6,24 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
-  tls:
-  - hosts:
-    - laa-fee-calculator-staging.apps.live-1.cloud-platform.service.justice.gov.uk
   rules:
-  - host: laa-fee-calculator-staging.apps.live-1.cloud-platform.service.justice.gov.uk
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: laa-fee-calculator
-          servicePort: 8080
+    - host: laa-fee-calculator-staging.apps.live-1.cloud-platform.service.justice.gov.uk
+      http:
+        paths:
+        - path: /
+          backend:
+            serviceName: laa-fee-calculator
+            servicePort: 8080
+    - host: staging.laa-fee-calculator.service.justice.gov.uk
+      http:
+        paths:
+        - path: /
+          backend:
+            serviceName: laa-fee-calculator
+            servicePort: 8080
+  tls:
+    - hosts:
+      - laa-fee-calculator-staging.apps.live-1.cloud-platform.service.justice.gov.uk
+    - hosts:
+      - staging.laa-fee-calculator.service.justice.gov.uk
+      secretName: laa-fee-calculator-staging-cert
