--- a/kubernetes_deploy/live-1/staging/deployment.yaml
+++ b/kubernetes_deploy/live-1/staging/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: app
         imagePullPolicy: Always
-        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-fee-calculator:app-latest
+        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-fee-calculator:set-me
         ports:
         - containerPort: 8080
         readinessProbe:
