--- a/kubernetes_deploy/live-1/dev/ingress.yaml
+++ b/kubernetes_deploy/live-1/dev/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: laa-fee-calculator
   namespace: laa-fee-calculator-dev
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: laa-fee-calculator-dev
 spec:
   rules:
     - host: laa-fee-calculator-dev.apps.live-1.cloud-platform.service.justice.gov.uk
