--- a/kubernetes_deploy/live-1/production/ingress.yaml
+++ b/kubernetes_deploy/live-1/production/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: laa-fee-calculator
   namespace: laa-fee-calculator-production
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: laa-fee-calculator-production
 spec:
   rules:
     - host: laa-fee-calculator-production.apps.live-1.cloud-platform.service.justice.gov.uk
