--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,8 @@ references:
           --build-arg VERSION_NUMBER=${CIRCLE_BUILD_NUM} \
           --build-arg COMMIT_ID=${CIRCLE_SHA1} \
           --build-arg BUILD_DATE=${BUILD_DATE} \
-          --build-arg BUILD_TAG=${CIRCLE_BRANCH} \
+          --build-arg BUILD_TAG=app-${CIRCLE_SHA1} \
+          --build-arg BUILD_BRANCH=${CIRCLE_BRANCH} \
           -t app .
 
   push_docker_image: &push_docker_image
@@ -38,13 +39,26 @@ references:
         aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login --username AWS --password-stdin ${ECR_ENDPOINT}
 
         component=app
-        docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${component}-${CIRCLE_SHA1}"
-        docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${component}-${CIRCLE_SHA1}"
+        docker_registry=${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}
+
+        docker_registry_tag=${docker_registry}:${component}-${CIRCLE_SHA1}
+        docker tag app ${docker_registry_tag}
+        docker push ${docker_registry_tag}
+
+        printf "\e[33m------------------------------------------------------------------------\e[0m\n"
+        printf "\e[33mBranch: $CIRCLE_BRANCH\e[0m\n"
+        printf "\e[33mRegistry tag: $docker_registry_tag\e[0m\n"
+        printf "\e[33m------------------------------------------------------------------------\e[0m\n"
 
         if [ "${CIRCLE_BRANCH}" == "master" ]; then
-          docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${component}-latest"
-          docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${component}-latest"
+          latest_tag=${docker_registry}:${component}-latest
+        else
+          latest_tag=${docker_registry}:${component}-${CIRCLE_BRANCH}-latest
         fi
+
+        docker tag app ${latest_tag}
+        docker push ${latest_tag}
+        printf "\e[33mAlso tagged as ${latest_tag}...\e[0m\n"
 
 # ------------------
 # EXECUTORS
