--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       args:
-        SECRET_KEY: CHANGE_ME
+        DJANGO_SECRET_KEY: 'NOT_A_REAL_SECRET_KEY'
     ports:
       - "8000:8080"
     links:
@@ -22,6 +22,7 @@ services:
     environment:
       ENV: local
       DEBUG: "True"
+      DJANGO_SECRET_KEY: 'NOT_A_REAL_SECRET_KEY'
       DB_NAME: fee_calculator
       DB_USERNAME: postgres
       DB_PASSWORD: postgres
