--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,18 +3,13 @@ updates:
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
+    day: thursday
     time: "03:00"
     timezone: Europe/London
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: flake8
-    versions:
-    - 3.8.4
-    - 3.9.0
-  - dependency-name: drf-nested-routers
-    versions:
-    - 0.92.5
-  - dependency-name: django
-    versions:
-    - "3.1"
+  rebase-strategy: "disabled"
+  reviewers:
+  - "jsugarman"
+  - "jrmhaig"
+  - "naseberry"
