--- a/kubernetes_deploy/live-1/staging/ingress.yaml
+++ b/kubernetes_deploy/live-1/staging/ingress.yaml
@@ -1,6 +1,9 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: laa-fee-calculator-laa-fee-calculator-staging-blue
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
   name: laa-fee-calculator
   namespace: laa-fee-calculator-staging
 spec:
