--- a/kubernetes_deploy/live-1/dev/ingress.yaml
+++ b/kubernetes_deploy/live-1/dev/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   annotations:
+    kubernetes.io/ingress.class: "modsec01"
+    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
     external-dns.alpha.kubernetes.io/set-identifier: laa-fee-calculator-laa-fee-calculator-dev-blue
     external-dns.alpha.kubernetes.io/aws-weight: "100"
   name: laa-fee-calculator
