Require live and live-1 deploy prior to prodution deploy
Since all traffic is against live cluster environments
we should be require deploying to live. I have left in
the deploy to live-1 for now for completeness

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,6 +219,7 @@ workflows:
       - production_live_1_deploy_approval:
           type: approval
           requires:
+            - staging_live_deploy
             - staging_live_1_deploy
           filters:
             branches:
