Add production pipeline steps for live

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,6 +149,13 @@ jobs:
           cluster: live-1
           environment: production
 
+  production_live_deploy:
+    executor: cloud-platform-executor
+    steps:
+      - deploy-to:
+          cluster: live
+          environment: production
+
 # ------------------
 # WORKFLOWS
 # ------------------
@@ -196,4 +203,17 @@ workflows:
           context:
             - laa-fee-calculator-base
             - laa-fee-calculator-live-1-production
-
+      - production_live_deploy_approval:
+          type: approval
+          requires:
+            - staging_live_deploy
+          filters:
+            branches:
+                only:
+                  - master
+      - production_live_deploy:
+          requires:
+            - production_live_deploy_approval
+          context:
+            - laa-fee-calculator-base
+            - laa-fee-calculator-live-production
