--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
           paths:
             - ~/project
       - run:
-          name: Split and run tests
+          name: Split and run calculator tests
           command: |
             TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/calculator/tests/**/test_*.py" "fee_calculator/apps/api/tests/**/test_*.py" | sed -e 's|\.py||g' -e 's|/|.|g' | circleci tests split)
             venv/bin/python -m coverage run --parallel-mode manage.py test $TESTDOTPATHS --verbosity=1 --noinput
@@ -155,15 +155,12 @@ jobs:
 
   test-viewer:
     executor: cloud-platform-executor
-    parallelism: 1
     steps:
       - checkout
       - *setup_python_env
       - run:
-          name: Split and run tests
-          command: |
-            TESTDOTPATHS=$(circleci tests glob "fee_calculator/apps/viewer/tests/**/test_*.py" | sed -e 's|\.py||g' -e 's|/|.|g' | circleci tests split)
-            venv/bin/python manage.py test $TESTDOTPATHS --verbosity=1 --noinput
+          name: Run viewer tests
+          command: venv/bin/python manage.py test fee_calculator/apps/viewer/tests --verbosity=3 --noinput
 
   build_and_push_image:
     executor: cloud-platform-executor
