Move CirclCI-specific dependencies to requirements file
The `coverage` library needs to be installed on CircleCI but not locally.
Instead of explicitly installing it in the CircleCI, this commit creates
a CirclCI-specific requirements file which inherits from
`requirements/base.txt` and additionally installs `coverage`. This can
be extended to include other packages in future if necessary.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ references:
         apk add python3-dev
         `which python3` -m venv venv
         venv/bin/pip install -U setuptools pip wheel
-        venv/bin/pip install -r requirements/base.txt
-        venv/bin/pip install -U coverage
+        venv/bin/pip install -r requirements/circleci.txt
 
   create-tmp-dir: &create-tmp-dir
     run:
