CFP-577 Run Flake8 in CircleCI workflow
Adds a `linting` job to the CircleCI config and runs it as part of the
`build-test-and-approval-deploy` workflow in parallel with the `test`
job.

Due to the version of flake8 used on CircleCI it has been necessary to
tweak the syntax of how we ignore certain code (specifically, methods
with annotations).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,15 @@ commands:
 # JOBS
 # ------------------
 jobs:
+  linting:
+    executor: cloud-platform-executor
+    steps:
+      - checkout
+      - *setup_python_env
+      - run:
+          name: Run flake8
+          command: venv/bin/python -m flake8
+
   test-calculator:
     executor: cloud-platform-executor
     parallelism: 2
@@ -220,12 +229,14 @@ workflows:
     jobs:
       - test-calculator
       - test-viewer
+      - linting
       - combine_test_coverage:
           requires:
             - test-calculator
             - test-viewer
       - build_and_push_image:
           requires:
+            - linting
             - combine_test_coverage
           context:
             - laa-fee-calculator-base
